--- a/FileExplorer/packages.config
+++ b/FileExplorer/packages.config
@@ -10,6 +10,7 @@
   <package id="Mono.Cecil" version="0.11.5" targetFramework="net48" />
   <package id="NLog" version="5.2.3" targetFramework="net48" />
   <package id="Onova" version="2.6.10" targetFramework="net48" />
+  <package id="Shellify" version="0.4.0" targetFramework="net48" />
   <package id="Syroot.Windows.IO.KnownFolders" version="1.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
