Changing DateTime format support added.

--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -129,6 +129,9 @@
             <setting name="LastUpdate" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DateTimeFormatString" serializeAs="String">
+                <value>G</value>
+            </setting>
         </FileExplorer.Properties.Settings>
     </userSettings>
     <startup>
