--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -148,6 +148,10 @@
              <assemblyIdentity name="System.Security.Principal.Windows" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
              <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
           </dependentAssembly>
+          <dependentAssembly>
+             <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+             <bindingRedirect oldVersion="0.0.0.0-8.0.0.1" newVersion="8.0.0.1" />
+          </dependentAssembly>
        </assemblyBinding>
    </runtime>
 </configuration>
