Save Last Session feature is added.

--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -132,6 +132,12 @@
             <setting name="DateTimeFormatString" serializeAs="String">
                 <value>G</value>
             </setting>
+            <setting name="SaveLastSession" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="LastSession" serializeAs="String">
+                <value />
+            </setting>
         </FileExplorer.Properties.Settings>
     </userSettings>
     <startup>
