#67 Search with Everything instad Windows Indexing

--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -138,6 +138,9 @@
             <setting name="LastSession" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SearchWithEverything" serializeAs="String">
+                <value>True</value>
+            </setting>
         </FileExplorer.Properties.Settings>
     </userSettings>
     <startup>
