--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -171,6 +171,7 @@
     <Reference Include="System.Security.Principal.Windows, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Security.Principal.Windows.5.0.0\lib\net461\System.Security.Principal.Windows.dll</HintPath>
     </Reference>
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Text.Encodings.Web, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Text.Encodings.Web.8.0.0\lib\net462\System.Text.Encodings.Web.dll</HintPath>
     </Reference>
@@ -297,6 +298,7 @@
     <Compile Include="Native\DirectoryWatcher.cs" />
     <Compile Include="Native\SafeNativeMethods.cs" />
     <Compile Include="Native\OpenFolderDialog.cs" />
+    <Compile Include="Native\SearchEverything.cs" />
     <Compile Include="Persistence\Expression.cs" />
     <Compile Include="Persistence\ExtensionMetadata.cs" />
     <Compile Include="Persistence\MenuItem.cs" />
