DefaultSearch and SearchWithEverything option added GetAllParents moved to a helper function DataUpdateService added for performance

--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -141,6 +141,9 @@
             <setting name="SearchWithEverything" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="DefaultSearch" serializeAs="String">
+                <value>0</value>
+            </setting>
         </FileExplorer.Properties.Settings>
     </userSettings>
     <startup>
