--- a/FileExplorer/Properties/Settings.settings
+++ b/FileExplorer/Properties/Settings.settings
@@ -125,5 +125,8 @@
     <Setting Name="SearchWithEverything" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="DefaultSearch" Type="System.Int16" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
