Nuget package upgrade.

--- a/FileExplorer/packages.config
+++ b/FileExplorer/packages.config
@@ -1,42 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AlphaFS" version="2.2.6" targetFramework="net48" />
-  <package id="AsyncKeyedLock" version="7.0.0" targetFramework="net48" />
+  <package id="AsyncKeyedLock" version="7.1.4" targetFramework="net48" />
   <package id="CommandLineParser" version="2.9.1" targetFramework="net48" />
   <package id="DevExpress.Mvvm.CodeGenerators" version="22.1.1" targetFramework="net48" />
-  <package id="Hardcodet.NotifyIcon.Wpf" version="1.1.0" targetFramework="net48" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="2.0.1" targetFramework="net48" />
   <package id="LiteDB" version="4.1.4" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
-  <package id="Mono.Cecil" version="0.11.5" targetFramework="net48" />
-  <package id="NLog" version="5.3.2" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net48" />
+  <package id="Mono.Cecil" version="0.11.6" targetFramework="net48" />
+  <package id="NLog" version="5.3.4" targetFramework="net48" />
   <package id="Onova" version="2.6.12" targetFramework="net48" />
   <package id="Shellify" version="0.4.0" targetFramework="net48" />
   <package id="Syroot.Windows.IO.KnownFolders" version="1.3.0" targetFramework="net48" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Claims" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
-  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
-  <package id="System.Text.Json" version="8.0.4" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
-  <package id="Vanara.Core" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.ComCtl32" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.Cryptography" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.Gdi32" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.Kernel32" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.Ole" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.Rpc" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.SearchApi" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.Security" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.Shared" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.Shell32" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.ShlwApi" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.PInvoke.User32" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.Windows.Extensions" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.Windows.Shell.Common" version="4.0.2" targetFramework="net48" />
-  <package id="Vanara.WPF.Extensions" version="4.0.2" targetFramework="net48" />
+  <package id="Vanara.Core" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.ComCtl32" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Cryptography" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Gdi32" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Kernel32" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Ole" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Rpc" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.SearchApi" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Security" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Shared" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Shell32" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.ShlwApi" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.PInvoke.User32" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.Windows.Extensions" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.Windows.Shell.Common" version="4.0.4" targetFramework="net48" />
+  <package id="Vanara.WPF.Extensions" version="4.0.4" targetFramework="net48" />
 </packages>
