--- a/FileExplorer/packages.config
+++ b/FileExplorer/packages.config
@@ -24,6 +24,7 @@
   <package id="System.Text.Json" version="9.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="TagLibSharp" version="2.3.0" targetFramework="net48" />
   <package id="Vanara.Core" version="4.0.4" targetFramework="net48" />
   <package id="Vanara.PInvoke.ComCtl32" version="4.0.4" targetFramework="net48" />
   <package id="Vanara.PInvoke.Cryptography" version="4.0.4" targetFramework="net48" />
