Image thumbnail support added. (#81) Persistence for "Minimize the ribbon" (#96) Custom folder support added. (#94) "About" menu added. (#92)

--- a/FileExplorer.Extension.ImagePreview/FileExplorer.Extension.ImagePreview.csproj
+++ b/FileExplorer.Extension.ImagePreview/FileExplorer.Extension.ImagePreview.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="DevExpress.Wpf.Core" Version="23.2.*-*">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
+    <PackageReference Include="PhotoSauce.MagicScaler" Version="0.15.0" />
   </ItemGroup>
 
   <ItemGroup>
