--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -144,6 +144,21 @@
             <setting name="DefaultSearch" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="MinimizedRibbon" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ThumbnailAnchor" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ThumbnailWidth" serializeAs="String">
+                <value>250</value>
+            </setting>
+            <setting name="ThumbnailHeight" serializeAs="String">
+                <value>250</value>
+            </setting>
+            <setting name="ThumbnailMode" serializeAs="String">
+                <value>0</value>
+            </setting>
         </FileExplorer.Properties.Settings>
     </userSettings>
     <startup>
