--- a/FileExplorer/packages.config
+++ b/FileExplorer/packages.config
@@ -5,11 +5,13 @@
   <package id="CommandLineParser" version="2.9.1" targetFramework="net48" />
   <package id="DevExpress.Mvvm.CodeGenerators" version="22.1.1" targetFramework="net48" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="2.0.1" targetFramework="net48" />
+  <package id="IndexRange" version="1.0.3" targetFramework="net48" />
   <package id="LiteDB" version="4.1.4" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net48" />
   <package id="Mono.Cecil" version="0.11.6" targetFramework="net48" />
   <package id="NLog" version="5.3.4" targetFramework="net48" />
   <package id="Onova" version="2.6.12" targetFramework="net48" />
+  <package id="PhotoSauce.MagicScaler" version="0.15.0" targetFramework="net48" />
   <package id="Shellify" version="0.4.0" targetFramework="net48" />
   <package id="Syroot.Windows.IO.KnownFolders" version="1.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
