--- a/FileExplorer/packages.config
+++ b/FileExplorer/packages.config
@@ -9,6 +9,7 @@
   <package id="LiteDB" version="4.1.4" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net48" />
   <package id="Mono.Cecil" version="0.11.6" targetFramework="net48" />
+  <package id="NaturalSort.Extension" version="4.3.0" targetFramework="net48" />
   <package id="NLog" version="5.3.4" targetFramework="net48" />
   <package id="Onova" version="2.6.12" targetFramework="net48" />
   <package id="PhotoSauce.MagicScaler" version="0.15.0" targetFramework="net48" />
