--- a/FileExplorer.Extension.ImagePreview/FileExplorer.Extension.ImagePreview.csproj
+++ b/FileExplorer.Extension.ImagePreview/FileExplorer.Extension.ImagePreview.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <None Remove="Assets\Edit.svg" />
+    <None Remove="Assets\Lock.svg" />
+    <None Remove="Assets\Reset.svg" />
     <None Remove="Assets\RotateLeft.svg" />
     <None Remove="Assets\RotateRight.svg" />
   </ItemGroup>
@@ -29,6 +31,8 @@
 
   <ItemGroup>
     <Resource Include="Assets\Edit.svg" />
+    <Resource Include="Assets\Lock.svg" />
+    <Resource Include="Assets\Reset.svg" />
     <Resource Include="Assets\RotateLeft.svg" />
     <Resource Include="Assets\RotateRight.svg" />
   </ItemGroup>
