--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -165,6 +165,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
    <runtime>
+	   <loadFromRemoteSources enabled="true" />
        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
            <probing privatePath="Library" />
           <dependentAssembly>
